--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
 }
 
 .container {
@@ -27,31 +28,50 @@ body {
   transition: transform 0.3s ease;
 }
 
+.tail {
+  transform-origin: top center;
+  transition: transform 0.1s ease;
+}
+
 </style>
 </head>
 <body>
 
 <div class="container">
-  <img src="dog.png" alt="犬" class="dog" id="dog">
+  <svg class="dog" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400" width="200" height="200">
+    <!-- 犬のイラスト -->
+    <path fill="#7D5217" d="M171.595 248.773c5.694 15.298 16.527 25.985 29.312 32.667-10.696 3.802-20.576 11.408-27.832 22.625H96.105c-6.177-11.095-15.702-19.744-27.309-23.225 12.607-6.015 22.327-15.383 28.193-27.441 3.646-8.026 6.931-20.747 8.236-34.641-16.607-6.452-29.528-22.133-35.323-39.204-6.274-18.275-2.248-33.03 10.104-41.866 2.884-1.867 6.11-3.069 9.544-3.578 2.91-7.695 7.354-16.133 15.071-19.733 7.718-3.6 15.667-1.279 21.246 4.496 5.585 5.773 7.582 14.9 5.738 22.276-3.114 15.229-11.129 32.41-23.881 44.504 18.371-1.583 34.854 11.327 39.669 29.287 4.083 15.936-1.471 33.645-13.499 43.298z"/>
+    <path fill="#FFFFFF" d="M248.041 202.246c-7.771-3.308-12.394-8.765-12.394-14.57 0-5.822 4.623-11.27 12.394-14.571 3.376-1.437 8.517-2.772 14.74-3.875 18.947-3.838 40.315-2.719 59.86 2.861-1.053 3.478-2.086 6.932-3.053 10.304-6.47 3.698-10.386 9.08-10.386 14.783 0 5.736 3.907 11.15 10.386 14.783 6.509 3.663 15.715 5.496 26.655 5.496 15.471 0 35.189-4.102 53.967-9.613 4.883-1.228 9.603-2.418 13.828-3.513 8.586-2.306 13.602-7.707 13.602-14.355 0-6.618-5.149-12.056-12.602-14.285 19.008-7.271 31.824-17.123 31.824-28.62 0-10.585-9.612-19.182-21.436-19.182-11.824 0-21.435 8.597-21.435 19.182 0 4.48 2.003 8.554 5.369 11.293 3.426 2.772 8.157 4.411 13.274 4.835 4.793.38 9.255-.696 13.018-3.121-4.64-5.52-7.392-12.624-7.392-20.007 0-15.825 13.536-28.68 30.229-28.68 16.691 0 30.228 12.855 30.228 28.68 0 5.94-3.47 11.556-9.33 15.812 14.68 6.682 29.342 12.337 44.883 17.65 4.543 1.493 8.701 2.879 12.471 4.165 21.228 7.336 31.013 15.331 31.013 23.766 0 6.533-9.322 15.129-20.701 17.513-3.947.74-8.475 1.123-13.554 1.123-18.619 0-38.288-6.05-58.924-10.124-10.902-2.115-20.331-3.945-28.209-5.382zm-24.027-51.77c2.605 5.196 6.423 8.242 11.04 8.242 4.616 0 8.434-3.046 11.039-8.242 2.724-5.435 4.257-12.125 4.257-20.165 0-8.042-1.533-14.729-4.257-20.164-2.605-5.195-6.423-8.24-11.039-8.24-4.617 0-8.435 3.045-11.04 8.24-2.724 5.435-4.257 12.122-4.257 20.164 0 8.04 1.533 14.73 4.257 20.165zm-118.439-19.107c.773 5.755 4.176 10.663 9.58 13.972 4.114 2.45 9.19 3.755 14.516 3.755 6.512 0 12.567-2.15 17.324-5.768 4.751-3.62 8.279-8.72 10.127-14.43-2.568-1.735-4.8-3.85-6.448-6.38-1.302-1.935-2.277-4.037-2.93-6.25-2.032-5.633-2.246-13.784-.551-23.317-2.45-1.01-5.078-2.034-7.847-3.036-7.712-2.74-16.012-5.684-24.712-8.685-3.41-1.22-6.894-2.463-10.455-3.712-3.06 4.764-5.014 11.19-5.62 17.975-.634 7.049.304 13.588 2.752 18.848-1.133 1.416-2.335 2.752-3.589 4.03-2.897 2.968-6.093 5.63-9.538 8.017z"/>
+    <!-- 尻尾 -->
+    <path fill="#7D5217" d="M295.916 214.078c0 6.262-9.227 14.225-20.614 14.225-11.388 0-20.615-7.963-20.615-14.225 0-6.263 9.227-11.349 20.615-11.349 11.387 0 20.614 5.087 20.614 11.349z" class="tail"/>
+  </svg>
 </div>
 
 <script>
 // JavaScript
-const dog = document.getElementById('dog');
+const dog = document.querySelector('.dog');
+const tail = document.querySelector('.tail');
 
-// マウスが動くと犬も一緒に動く
+// マウスが動くと犬と尻尾も一緒に動く
 document.addEventListener('mousemove', (e) => {
   const x = e.clientX / window.innerWidth - 0.5;
-  dog.style.transform = `translateX(-50%) translateX(${x * 100}px)`;
+  const y = e.clientY / window.innerHeight - 0.5;
+  dog.style.transform = `translate(-50%, -50%) translate(${x * 20}px, ${y * 20}px)`;
+  tail.style.transform = `rotate(${x * 10}deg)`;
+});
+
+// マウスをクリックすると犬の尻尾を振る
+document.addEventListener('click', () => {
+  tail.style.animation = 'wag 0.5s ease alternate infinite';
 });
 
 // スクロールすると犬がジャンプする
 window.addEventListener('scroll', () => {
   const scrollHeight = window.scrollY;
   if (scrollHeight > 200) { // 200px以上スクロールしたら
-    dog.style.transform = `translateX(-50%) translateY(-${scrollHeight / 10}px)`;
+    dog.style.transform = `translate(-50%, -50%) translateY(-${scrollHeight / 10}px)`;
   } else {
-    dog.style.transform = `translateX(-50%) translateY(0)`;
+    dog.style.transform = `translate(-50%, -50%) translateY(0)`;
   }
 });
 </script>
