--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>動く犬のサイト</title>
+<title>動くかわいい犬のドックラン</title>
 <style>
 /* CSS スタイル */
 body {
@@ -11,7 +11,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
+  background-color: #b6e1f0;
 }
 
 .container {
@@ -38,6 +38,8 @@ body {
 <body>
 
 <div class="container">
+  <!-- ドッグラン風の背景 -->
+  <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 800px; height: 400px; background-color: #9dd1ea; border-radius: 50%;"></div>
   <svg class="dog" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400" width="200" height="200">
     <!-- 犬のイラスト -->
     <path fill="#7D5217" d="M171.595 248.773c5.694 15.298 16.527 25.985 29.312 32.667-10.696 3.802-20.576 11.408-27.832 22.625H96.105c-6.177-11.095-15.702-19.744-27.309-23.225 12.607-6.015 22.327-15.383 28.193-27.441 3.646-8.026 6.931-20.747 8.236-34.641-16.607-6.452-29.528-22.133-35.323-39.204-6.274-18.275-2.248-33.03 10.104-41.866 2.884-1.867 6.11-3.069 9.544-3.578 2.91-7.695 7.354-16.133 15.071-19.733 7.718-3.6 15.667-1.279 21.246 4.496 5.585 5.773 7.582 14.9 5.738 22.276-3.114 15.229-11.129 32.41-23.881 44.504 18.371-1.583 34.854 11.327 39.669 29.287 4.083 15.936-1.471 33.645-13.499 43.298z"/>
